--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,6 +1,6 @@
 .page {
   background-color: #fcf5e5;
-  width: 1440px;
+  width: 100%;
   z-index: 1;
   font-family: "poppins", arial, serif;
 }
@@ -24,7 +24,7 @@
   display: flex;
   margin: 20px 80px 0;
   justify-content: space-between;
-  width: 1280px;
+  max-width: 100%;
   min-height: 210px;
   border-bottom: 1px solid rgba(33, 33, 33, 0.4);
   padding-bottom: 20px;
@@ -44,7 +44,7 @@
 }
 
 .page__cards {
-  width: 1280px;
+  max-width: 100%;
   min-height: 970px;
   margin: 20px 80px 0;
   display: grid;
@@ -55,7 +55,13 @@
   border-bottom: 1px solid rgba(33, 33, 33, 0.4);
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 1310px) {
+  .page__cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 768px) {
   .page {
     width: min-content;
   }
@@ -76,5 +82,6 @@
   .page__header-button {
     width: 288px;
     margin: 20px auto;
+    max-width: 100%;
   }
 }
